# GameStatistic

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
gamestatistics/gamestatistics/: asgi.py  celery.py  settings.py  urls.py
gamestatistics/grafs/: service_funcrions.py
gamestatistics/grafs/management/commands/: ser.py
gamestatistics/grafs/migrations/: 0003_remove_event_date_remove_event_loadtime_and_more.py  0005_alter_event_loadtime.py  0007_alter_event_devicetype_alter_event_eventname_and_more.py  0008_alter_event_sub_id_alter_subuser_platformuserid_and_more.py  0009_remove_subuser_event_subuser_event.py
gamestatistics/templates/: base.html
gamestatistics/templates/grafs/: graf-logarifmic.html  graf.html
gamestatistics/templates/registration/: login.html
webapp/: Dockerfile  pyproject.toml
webapp/gamestatistics/: manage.py
webapp/gamestatistics/gamestatistics/: celery.py  settings.py  wsgi.py
webapp/gamestatistics/grafs/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
webapp/gamestatistics/grafs/migrations/: 0001_initial.py  0002_event_subuser_version_delete_person.py  0004_event_date_event_loadtime_event_localtime.py  0006_alter_event_date_alter_event_localtime.py
webapp/gamestatistics/static/grafs/: style.css
webapp/gamestatistics/templates/grafs/: graf-logarifmic.html  graf.html
