[tool.poetry]
name = "practic-site-gamestatistic"
version = "0.1.0"
description = "project for codovstvo"
authors = ["Dev-cmyser <kirrallt@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gamestatistics"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
celery = "^5.2.7"
requests = "^2.28.1"
asyncio = "^3.4.3"
redis = "^4.3.4"
django-celery-beat = "^2.4.0"
flower = "^1.2.0"
akismet = "^1.2.1"
django-google-charts = "^0.1.1"
django-qsstats-magic = "^1.1.0"
black = "^22.10.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
